--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "Pataconf",
+  "name": "dev-fest",
   "version": "0.0.1",
-  "description": "El festival de programación donde las comunidades son bienvenidas a dar una charla",
+  "description": "Landing Devfest",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "gulp dist"
   },
-  "author": "colombia-dev <hola@colombia-dev.org>",
+  "author": "Monoku",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3",
-    "pug": "^2.0.0-beta6"
-  },
-  "devDependencies": {
     "browser-sync": "^2.8.2",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
-    "gulp-refresh": "^1.1.0",
     "gulp-sass": "^2.0.4",
+    "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.4.2"
+  },
+  "devDependencies": {
   },
   "engines": {
     "node": "0.12.7"
