Add @mafesernaarboleda as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,15 @@
         "design",
         "eventOrganizing"
       ]
+    },
+    {
+      "login": "mafesernaarboleda",
+      "name": "Mafe Serna",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/14205513?v=4",
+      "profile": "https://github.com/mafesernaarboleda",
+      "contributions": [
+        "eventOrganizing"
+      ]
     }
   ]
 }
