--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   },
   "dependencies": {
     "gatsby": "^2.13.21",
+    "gatsby-image": "^2.2.14",
+    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-json": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.2.12",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
