--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-transformer-sharp": "^2.2.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "styled-reset": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
