--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "array-flat-polyfill": "^1.0.1",
     "gatsby": "^2.13.21",
     "gatsby-image": "^2.2.14",
     "gatsby-plugin-sharp": "^2.2.18",
