--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "array-flat-polyfill": "^1.0.1",
     "gatsby": "^2.13.21",
     "gatsby-image": "^2.2.14",
+    "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.2.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1"
   },
