--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "array-flat-polyfill": "^1.0.1",
     "gatsby": "^2.13.21",
     "gatsby-image": "^2.2.14",
+    "gatsby-plugin-manifest": "2.2.10",
+    "gatsby-plugin-offline": "2.2.9",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-source-filesystem": "^2.1.5",
